Revision history for Perl extension Module::Build.

 - Fixed a catdir() that needed to be catfile() in the .packlist
   creation code. [John E. Malmberg]

 - If a *.PL file ended abnormally during the build, processing should
   have stopped, but it didn't.  Fixed. [Matthew Cast and David
   Golden]

 - Module::Build::Compat adds "require 5.XXXXX" to Makefile.PL when 
   'perl' is specified as a 'requires' prerequisite [David Golden]

 - Refactored t/compat.t for modularity and transparency; added 
   labels for all tests; supressed subprocess output to 
   STDOUT and STDERR [David Golden]

 - Fixed bug in perl_version_to_float when version is already a float
   [David Golden]

 - Removed a mention of $build->{config} from the documentation, the
   official interface to Config.pm settings is now via the
   $build->config() and has been for some time. [Suggested by Michael
   Schwern]

 - Tweaked some text in the Cookbook to bring it into the modern age,
   and added a recipe for accessing Config.pm settings. [Ibid]

 - Lots of POD link/readability improvements to the Module::Build::API
   documentation [Salve J. Nilsen]

 - Added configure_requires as a new type of prereq.  [Suggested by Adam
   Kennedy]

 - Patch 31156 from bleadperl: some filename dot and extension help
   for Module::Build on VMS. [Craig Berry]

 - Reworked the _detildefy() method so it doesn't depend on glob()
   anymore.  This gets rid of a problem with spaces or other special
   shell characters in things like 'prefix' or 'install_path'
   entries. [Prodding by Eric Wilhelm]

 - Added midnightbsd to the list of Unix-like OSes we know about
   [Rafael Garcia-Suarez]

0.2808 - Sat Apr 28 12:59:43 2007

 - Added is_vmsish(), is_windowsish(), and is_unixish() boolean
   convenience functions.  Fixes some test failures on platforms where
   $^O is set to a value we don't know about (like 'gnu').

 - Upgraded to version.pm 0.7203. [John Peacock]
